--- a/src/app/shared/users-table/users-table.component.html
+++ b/src/app/shared/users-table/users-table.component.html
@@ -7,7 +7,6 @@
     #input
   />
 </mat-form-field>
-
 <div class="mat-elevation-z8">
   <table mat-table [dataSource]="dataSource" matSort>
     <!-- Name & ID Column -->
@@ -61,8 +60,12 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>Action</th>
       <td mat-cell *matCellDef="let user">
-        <button mat-raised-button class="btn-edit">Edit</button>
-        <button mat-raised-button class="btn-delete">Delete</button>
+        <button mat-raised-button class="btn-edit" (click)="onEdit(user)">
+          Edit
+        </button>
+        <button mat-raised-button class="btn-delete" (click)="onDelete(user)">
+          Delete
+        </button>
       </td>
     </ng-container>
 
