--- a/src/app/shared/add-user-dialog/add-user-dialog.component.scss
+++ b/src/app/shared/add-user-dialog/add-user-dialog.component.scss
@@ -32,7 +32,7 @@
 }
 
 h2 {
-  margin-bottom: 20px;
+  margin-bottom: 0;
   color: #333;
 }
 
@@ -43,4 +43,30 @@ mat-dialog-content {
 mat-dialog-actions {
   padding: 16px 0;
   margin-bottom: 0;
+}
+
+.mat-mdc-raised-button:disabled {
+  border-radius: 10px;
+  padding: 0 40px;
+}
+
+.mat-mdc-raised-button:not(:disabled) {
+  color: white;
+  background-color: #577839;
+  border-radius: 10px;
+  padding: 0 40px;
+}
+
+.mat-mdc-raised-button:not(:disabled):hover {
+  background-color: #50722f;
+}
+
+.cancel-button {
+  color: #577839 !important;
+  padding: 0 30px;
+  border-radius: 10px;
+}
+
+.cancel-button:hover {
+  background-color: #fafff5 !important;
 }
