--- a/src/app/shared/delete-user-dialog/delete-user-dialog.component.html
+++ b/src/app/shared/delete-user-dialog/delete-user-dialog.component.html
@@ -18,7 +18,9 @@
   </div>
 
   <div mat-dialog-actions align="end">
-    <button mat-button (click)="onCancel()">Cancel</button>
+    <button class="cancel-button" mat-button (click)="onCancel()">
+      Cancel
+    </button>
     <button mat-raised-button color="warn" (click)="onConfirmDelete()">
       Delete
     </button>
