--- a/src/app/shared/header-nav/header-nav.component.html
+++ b/src/app/shared/header-nav/header-nav.component.html
@@ -1,5 +1,9 @@
 <mat-toolbar>
   <h1 class="logoLabel">Instituthree</h1>
 
+  <span class="spacer"></span>
+
   <app-select></app-select>
+
+  <app-user-profile></app-user-profile>
 </mat-toolbar>
