--- a/src/app/shared/add-user-dialog/add-user-dialog.component.html
+++ b/src/app/shared/add-user-dialog/add-user-dialog.component.html
@@ -88,10 +88,17 @@
     </div>
 
     <div mat-dialog-actions align="end">
-      <button mat-button type="button" (click)="onCancel()">Cancel</button>
+      <button
+        mat-button
+        class="cancel-button"
+        type="button"
+        (click)="onCancel()"
+      >
+        Cancel
+      </button>
       <button
         mat-raised-button
-        color="primary"
+        class="save-button"
         type="submit"
         [disabled]="!userForm.valid"
       >
