--- a/src/app/shared/delete-user-dialog/delete-user-dialog.component.scss
+++ b/src/app/shared/delete-user-dialog/delete-user-dialog.component.scss
@@ -1,5 +1,5 @@
 .delete-dialog-container {
-  padding: 0;
+  padding: 6px 24px;
 }
 
 h2 {
@@ -17,8 +17,9 @@ h2 {
   border: 1px solid #e0e0e0;
   border-radius: 8px;
   padding: 16px;
-  background-color: #f9f9f9;
+  background-color: #f0eeee;
   margin-bottom: 16px;
+  border: 1px solid #000000;
 }
 
 .user-details {
@@ -32,7 +33,7 @@ h2 {
   border-radius: 50%;
   object-fit: cover;
   margin-right: 16px;
-  border: 1px solid #ddd;
+  border: 1px solid #000000;
 }
 
 .user-text {
@@ -55,4 +56,27 @@ h2 {
 mat-dialog-actions {
   padding: 16px 0 0 0;
   margin-bottom: 0;
+}
+
+.mat-mdc-raised-button:not(:disabled) {
+  color: white;
+  background-color: #ec6666;
+  border-radius: 10px;
+  padding: 0 40px;
+}
+
+.mat-mdc-raised-button:not(:disabled):hover {
+  background-color: #ec4e4e;
+}
+
+.cancel-button {
+  background-color: transparent;
+  color: #f99191 !important;
+  padding: 0 30px;
+  border-radius: 10px;
+}
+
+.cancel-button:hover {
+  color: #db6b6b !important;
+  background-color: #ffeeee !important;
 }
