--- a/src/app/shared/edit-user-dialog/edit-user-dialog.component.html
+++ b/src/app/shared/edit-user-dialog/edit-user-dialog.component.html
@@ -3,6 +3,10 @@
 
   <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
     <div mat-dialog-content>
+      <div class="avatar-preview" *ngIf="userForm.get('photoUrl')?.value">
+        <img [src]="userForm.get('photoUrl')?.value" alt="User avatar" />
+      </div>
+
       <div class="form-row">
         <mat-form-field appearance="outline" class="full-width">
           <mat-label>ID</mat-label>
@@ -81,14 +85,17 @@
           />
         </mat-form-field>
       </div>
-
-      <div class="avatar-preview" *ngIf="userForm.get('photoUrl')?.value">
-        <img [src]="userForm.get('photoUrl')?.value" alt="User avatar" />
-      </div>
     </div>
 
     <div mat-dialog-actions align="end">
-      <button mat-button type="button" (click)="onCancel()">Cancel</button>
+      <button
+        class="cancel-button"
+        mat-button
+        type="button"
+        (click)="onCancel()"
+      >
+        Cancel
+      </button>
       <button
         mat-raised-button
         color="primary"
