--- a/src/app/shared/edit-user-dialog/edit-user-dialog.component.scss
+++ b/src/app/shared/edit-user-dialog/edit-user-dialog.component.scss
@@ -11,6 +11,19 @@
   width: 100%;
 }
 
+.mat-mdc-dialog-title {
+  padding: 10px 24px 0;
+  margin-bottom: 0;
+}
+
+.mat-mdc-dialog-container .mat-mdc-dialog-content {
+  padding: 30px 24px 0;
+}
+
+.form-row[_ngcontent-ng-c3525863421] {
+  margin-bottom: 8px;
+}
+
 .two-columns {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -20,14 +33,14 @@
 .avatar-preview {
   display: flex;
   justify-content: center;
-  margin: 16px 0;
+  margin: 0 0 20px 0;
 
   img {
     width: 100px;
     height: 100px;
     border-radius: 50%;
     object-fit: cover;
-    border: 1px solid #ddd;
+    border: 1px solid #000000;
   }
 }
 
@@ -43,4 +56,21 @@ mat-dialog-content {
 mat-dialog-actions {
   padding: 16px 0;
   margin-bottom: 0;
+}
+
+.mat-mdc-raised-button:not(:disabled) {
+  color: white;
+  background-color: #5884ac;
+  border-radius: 10px;
+  padding: 0 40px;
+}
+
+.cancel-button {
+  color: #5884ac !important;
+  padding: 0 20px;
+  border-radius: 10px;
+}
+
+.cancel-button:hover {
+  background-color: #f4faff !important;
 }
