--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -19,7 +19,10 @@
           >
         </li>
         <li>
-          <a routerLink="/roles" routerLinkActive="active" class="nav-link ps-4"
+          <a
+            routerLink="/roles-management"
+            routerLinkActive="active"
+            class="nav-link ps-4"
             ><i class="bi bi-person-lock me-2"></i> Roles</a
           >
         </li>
@@ -42,11 +45,6 @@
         <a routerLink="/settings" class="nav-link settings-link"
           ><i class="btn-config bi-gear-fill me-2"></i> Settings</a
         >
-      </li>
-      <li>
-        <button type="button" (click)="logout()" class="logout">
-          <i class="bi bi-box-arrow-right me-2"></i> Logout
-        </button>
       </li>
     </ul>
   </div>
