--- a/src/app/shared/sidebar/sidebar.component.scss
+++ b/src/app/shared/sidebar/sidebar.component.scss
@@ -10,7 +10,7 @@
   height: 100vh;
   background-color: #f9f9f9;
   backdrop-filter: blur(10px);
-  //border-right: 1px solid #ddd;
+  border-right: 1px solid #ddd;
   display: flex;
   flex-direction: column;
   overflow-x: hidden;
