API connected login, register, usertable and create user

--- a/src/app/shared/users-table/users-table.component.html
+++ b/src/app/shared/users-table/users-table.component.html
@@ -86,6 +86,7 @@
 </div>
 <div>
   <mat-paginator
+    [pageSize]="10"
     [pageSizeOptions]="[5, 10, 25, 50, 100]"
     showFirstLastButtons
   ></mat-paginator>
