--- a/src/app/shared/edit-user-dialog/edit-user-dialog.component.html
+++ b/src/app/shared/edit-user-dialog/edit-user-dialog.component.html
@@ -49,6 +49,28 @@
         </mat-form-field>
       </div>
 
+      <div class="form-row">
+        <mat-form-field appearance="outline" class="full-width">
+          <mat-label>Password</mat-label>
+          <input
+            matInput
+            [type]="'password'"
+            formControlName="password"
+            required
+          />
+          <mat-error
+            *ngIf="password?.invalid && (password?.dirty || password?.touched)"
+          >
+            <span *ngIf="password?.errors?.['required']"
+              >Password is required</span
+            >
+            <span *ngIf="password?.errors?.['minlength']"
+              >Minimum 6 characters</span
+            >
+          </mat-error>
+        </mat-form-field>
+      </div>
+
       <div class="form-row two-columns">
         <mat-form-field appearance="outline">
           <mat-label>Role</mat-label>
