--- a/src/app/shared/delete-user-dialog/delete-user-dialog.component.html
+++ b/src/app/shared/delete-user-dialog/delete-user-dialog.component.html
@@ -10,7 +10,7 @@
       <div class="user-details">
         <img [src]="data.user.photoUrl" alt="User photo" class="user-avatar" />
         <div class="user-text">
-          <p class="user-name">{{ data.user.fullName }}</p>
+          <p class="user-name">{{ data.user.name }} {{ data.user.lastName }}</p>
           <p class="user-id">ID: {{ data.user.id }}</p>
         </div>
       </div>
