--- a/src/app/shared/users-table/users-table.component.scss
+++ b/src/app/shared/users-table/users-table.component.scss
@@ -155,6 +155,14 @@ th.mat-column-status {
   min-width: 100px;
 }
 
+/* Description column */
+.mat-column-description {
+  max-width: 300px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 /* Actions column */
 td.mat-column-actions,
 th.mat-column-actions {
