--- a/src/app/pages/user-management/user-management.component.html
+++ b/src/app/pages/user-management/user-management.component.html
@@ -1,7 +1,7 @@
-<app-header-nav></app-header-nav>
-<app-sidebar></app-sidebar>
-
-<main class="user-management-container">
+<main
+  class="user-management-container"
+  [class.sidebar-collapsed]="!isSidebarOpen"
+>
   <div class="user-management-header">
     <h1>User Management</h1>
 
